--- a/Fast_beauty.html
+++ b/Fast_beauty.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Alejandro Betancourth">
     <title>Fast beauty</title>
 </head>
+    Cambio 1
 <body>
     <h1>Fast beauty</h1>
      
